[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2021"
description = "Spreadsheet manipulation package."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "spreadsheet"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
csv = "1.1.6"
dotenv = "0.15.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
nom = "7.1.3"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.46"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
criterion = "0.4.0"
plotters = "0.3.4"

[profile.release]
debug = true
