[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2021"
description = "Spreadsheet manipulation package."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "spreadsheet"

[dependencies]
aid = { git = "https://github.com/grantspassoregon/aid.git", default-features = false, features = [
  "bin",
  "csvs",
] }
address = { git = "https://github.com/grantspassoregon/address.git" }
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
nom = "7.1.3"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
derive_more = "0.99.18"

[dev-dependencies]
criterion = "0.5.1"
plotters = "0.3.6"

[profile.release]
debug = true
