[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2021"
description = "Spreadsheet manipulation package."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "spreadsheet"

[dependencies]
aid = { git = "https://github.com/grantspassoregon/aid.git", default-features = false, features = [
  "bin",
  "csvs",
  "gis",
  "time",
] }
address = { git = "https://github.com/grantspassoregon/address.git" }
bincode = "1.3.3"
clap = { version = "4.5.13", features = ["derive"] }
csv = "1.3.0"
derive_more = "0.99.18"
dotenvy = "0.15.7"
galileo = { git = "https://github.com/Maximkaaa/galileo" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo" }
geo = { version = "0.28.0", features = ["serde"] }
geo-types = "0.7.13"
indicatif = { version = "0.17.8", features = ["rayon"] }
jiff = { version = "0.1.3", features = ["serde"] }
nom = "7.1.3"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
shapefile = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
geojson = "0.24.1"
serde_json = "1.0.122"

[dev-dependencies]
criterion = "0.5.1"
plotters = "0.3.6"

[profile.release]
debug = true
